[project]
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
name = "rsp-reaper"
description = "Tool to remove certain OCI images from a repository"
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
keywords = ["rubin", "lsst"]
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Private :: Do Not Upload",
    "Typing :: Typed",
]
requires-python = ">=3.13"
dependencies = [
    "google-cloud-artifact-registry",
    "httpx",
    "pyyaml",
    "safir",
    "semver",
    "structlog",
]
dynamic = ["version"]

[project.scripts]
cowbell = "rsp_reaper.cli:cowbell"

[project.urls]
Source = "https://github.com/lsst-sqre/rsp-reaper"

[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "coverage[toml]>=5.0.2",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "scriv[toml]",
]
lint = [
    "pre-commit",
    "pre-commit-uv",
    "ruff",
]
tox = [
    "tox>=4.24",
    "tox-uv>=1.25",
]
typing = [
    "mypy",
    "types-pyyaml",
]

[tool.coverage.run]
parallel = true
branch = true
source = ["rsp_reaper"]

[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.mypy]
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true
local_partial_types = true
no_implicit_reexport = true
plugins = ["pydantic.mypy"]
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "strict"
# The python_files setting is not for test detection (pytest will pick up any
# test files named *_test.py without this setting) but to enable special
# assert processing in any non-test supporting files under tests.  We
# conventionally put test support functions under tests.support and may
# sometimes use assert in test fixtures in conftest.py, and pytest only
# enables magical assert processing (showing a full diff on assert failures
# with complex data structures rather than only the assert message) in files
# listed in python_files.
python_files = ["tests/*.py", "tests/*/*.py"]

# The rule used with Ruff configuration is to disable every lint that has
# legitimate exceptions that are not dodgy code, rather than cluttering code
# with noqa markers. This is therefore a reiatively relaxed configuration that
# errs on the side of disabling legitimate lints.
#
# Reference for settings: https://beta.ruff.rs/docs/settings/
# Reference for rules: https://beta.ruff.rs/docs/rules/
[tool.ruff]
extend = "ruff-shared.toml"

[tool.ruff.lint.per-file-ignores]
"harnesses/**.py" = [
    "T201",   # Harnesses print during setup
]
"src/rsp_reaper/models/rsptag.py" = [
    "C901",    # yes, compare() does have a lot of cases
]
"src/rsp_reaper/services/reaper.py" = [
    "C901",    # yes, RSP retention is complicated
    "PLR0912", # yes, RSP retention is complicated
    "T201",    # Reporting uses print
]
"src/rsp_reaper/storage/gar.py" = [
    "TRY004",  # That's not even a TypeError
    "ERA001",  # It's a commented-out error message justifying the technique
]
"src/rsp_reaper/cli.py" = [
    "T201",    # Reporting uses print
]
"tests/**.py" = [
    "SLF001",  # Tests are allowed to access private members
    "T201",    # Tests are allowed to print
    "S101",    # Tests can use assert
]

[tool.ruff.lint.isort]
known-first-party = ["harnesses", "rsp_reaper", "tests"]
split-on-trailing-comma = false

[tool.scriv]
categories = [
    "Backwards-incompatible changes",
    "New features",
    "Bug fixes",
    "Other changes",
]
entry_title_template = "{{ version }} ({{ date.strftime('%Y-%m-%d') }})"
format = "md"
md_header_level = "2"
new_fragment_template = "file:changelog.d/_template.md.jinja"
skip_fragments = "_template.md.jinja"

[tool.setuptools_scm]
